--- a/package.json
+++ b/package.json
@@ -16,12 +16,10 @@
   "engines": {
     "node": ">=22.19.0"
   },
-  "main": "index.ts",
+  "main": "server.ts",
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc --watch",
+    "dev": "tsc --watch",
     "start": "node --watch --env-file=.env dist/backend/server.js",
-    "dev:server": "tsx watch src/backend/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
