--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "main": "server.ts",
   "scripts": {
-    "dev": "tsc --watch",
+    "build": "tsc --watch",
     "backend": "node --watch --env-file=.env dist/backend/server.js",
     "frontend": "node --watch dist/frontend/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
